--- a/.github/workflows/auto_fix_and_build_full_docker.yaml
+++ b/.github/workflows/auto_fix_and_build_full_docker.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: Fetch origin
         working-directory: /home/nitic-robot-club/nhk2025b_ros2
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
           REPO: ${{ github.repository }}
         run: | 
           git config --global user.name "github-actions"
